# resolver-task

./: .gitmodules  AILookup.cxx  AILookup.h  AILookupTask.cxx  AILookupTask.h  AIResolver.cxx  AIResolver.h  AddrInfoLookup.cxx  AddrInfoLookup.h  AddressInfo.cxx  AddressInfo.h  CMakeLists.txt  DnsResolver.cxx  DnsResolver.h  GetAddrInfo.cxx  GetAddrInfo.h  GetNameInfo.cxx  GetNameInfo.h  Lookup.cxx  Lookup.h  Makefile.am  NameInfoLookup.h  README.md  Resolver.cxx  Resolver.h  Service.cxx  Service.h  configure.m4
